--- a/app/src/main/res/layout/newtrack_dialog.xml
+++ b/app/src/main/res/layout/newtrack_dialog.xml
@@ -9,8 +9,10 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="20dip">
 
     <TextView
         android:layout_width="match_parent"
@@ -31,14 +33,14 @@
 
         <Button
             android:id="@+id/newtrack_button_cancel"
+            android:text="@string/cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel" />
+            android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/newtrack_button_submit"
             android:text="@string/submit"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/newtrack_button_submit" />
+            android:layout_height="wrap_content" />
     </TableRow>
 </LinearLayout>
