Select new track name in text edit on focus

--- a/app/src/main/res/layout/newtrack_dialog.xml
+++ b/app/src/main/res/layout/newtrack_dialog.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:inputType="textShortMessage"
         android:text="@string/label_name"
+        android:selectAllOnFocus="true"
         android:ems="10" />
 
     <TableRow
