Improve services status reporting, permissions handling, updating preferences Fixes #3, fixes #4, fixes #5

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -61,8 +61,7 @@
         android:title="@string/pref_provider_title"
         android:summary="@string/pref_provider_summary"
         android:entries="@array/providersEntries"
-        android:entryValues="@array/providersValues"
-        android:defaultValue="@string/pref_provider_default" />
+        android:entryValues="@array/providersValues" />
     <ListPreference
         android:key="prefUnits"
         android:title="@string/pref_units_title"
