--- a/app/src/main/res/drawable/ic_schedule_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_schedule_white_24dp.xml
@@ -5,6 +5,9 @@
   ~ This file is part of μlogger-android.
   ~ Licensed under GPL, either version 3, or any later.
   ~ See <http://www.gnu.org/licenses/>
+
+  ~ Material Design icon by Google.
+  ~ Released under Apache License 2.0.
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
