--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -9,7 +9,7 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <net.fabiszewski.ulogger.TrimmedEditTextPreference
+    <net.fabiszewski.ulogger.UrlEditTextPreference
         android:key="prefUsername"
         android:title="@string/pref_username_title"
         android:summary="@string/pref_username_summary"
@@ -19,7 +19,7 @@
         android:title="@string/pref_pass_title"
         android:summary="@string/pref_pass_summary"
         android:inputType="textPassword" />
-    <net.fabiszewski.ulogger.TrimmedEditTextPreference
+    <net.fabiszewski.ulogger.UrlEditTextPreference
         android:key="prefHost"
         android:title="@string/pref_host_title"
         android:summary="@string/pref_host_summary"
