--- a/app/src/main/res/values-ja/arrays.xml
+++ b/app/src/main/res/values-ja/arrays.xml
@@ -17,6 +17,7 @@
         <item>15 分</item>
         <item>30 分</item>
         <item>1 時間</item>
+        <item>別の</item>
     </string-array>
 
     <string-array name="minDistanceEntries">
@@ -27,6 +28,7 @@
         <item>500 m</item>
         <item>1 km</item>
         <item>5 km</item>
+        <item>別の</item>
     </string-array>
 
     <string-array name="minAccuracyEntries">
@@ -38,6 +40,7 @@
         <item>500 m</item>
         <item>1 km</item>
         <item>5 km</item>
+        <item>別の</item>
     </string-array>
 
     <string-array name="providersEntries">
