--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -11,7 +11,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ulogger="http://schemas.android.com/apk/res/net.fabiszewski.ulogger">
 
-    <net.fabiszewski.ulogger.UrlEditTextPreference
+    <net.fabiszewski.ulogger.TrimmedEditTextPreference
         android:key="prefUsername"
         android:title="@string/pref_username_title"
         android:summary="@string/pref_username_summary"
