--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -50,15 +50,20 @@
         android:text="@string/about_credits"
         android:textSize="16sp" />
 
-    <TableRow
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="30dip">
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:paddingTop="30dip"
+        style="?android:attr/buttonBarStyle" >
 
         <Button
             android:id="@+id/about_button_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ok" />
-    </TableRow>
+            android:text="@string/ok"
+            style="?android:attr/buttonBarButtonStyle" />
+
+    </LinearLayout>
 </LinearLayout>
