--- a/app/src/main/res/layout/newtrack_dialog.xml
+++ b/app/src/main/res/layout/newtrack_dialog.xml
@@ -17,7 +17,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/label_newtrack_name" />
+        android:text="@string/label_newtrack_name"
+        android:contentDescription="@string/label_newtrack_name"
+        android:labelFor="@id/newtrack_edittext" />
 
     <EditText
         android:id="@+id/newtrack_edittext"
@@ -25,22 +27,29 @@
         android:layout_height="wrap_content"
         android:inputType="textShortMessage"
         android:text="@string/label_name"
+        android:hint="@string/label_name"
         android:ems="10" />
 
-    <TableRow
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        style="?android:attr/buttonBarStyle" >
 
         <Button
             android:id="@+id/newtrack_button_cancel"
             android:text="@string/cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:id="@+id/newtrack_button_submit"
             android:text="@string/submit"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </TableRow>
+            android:layout_height="wrap_content"
+            style="?android:attr/buttonBarButtonStyle" />
+
+    </LinearLayout>
 </LinearLayout>
