--- a/app/src/main/res/layout/other_dialog.xml
+++ b/app/src/main/res/layout/other_dialog.xml
@@ -18,29 +18,38 @@
         android:id="@+id/other_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:text="@string/dash"
+        android:contentDescription="@string/dash"
+        android:labelFor="@+id/other_edittext" />
 
     <EditText
         android:id="@+id/other_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
+        android:hint="@string/dash"
         android:ems="10" />
 
-    <TableRow
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        style="?android:attr/buttonBarStyle" >
 
         <Button
             android:id="@+id/other_button_cancel"
             android:text="@string/cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:id="@+id/other_button_submit"
             android:text="@string/submit"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </TableRow>
+            android:layout_height="wrap_content"
+            style="?android:attr/buttonBarButtonStyle" />
+
+    </LinearLayout>
 </LinearLayout>
