Attr attribute not allowed in xml drawable in API < 21 Fixes #34

--- a/app/src/main/res/drawable/separator.xml
+++ b/app/src/main/res/drawable/separator.xml
@@ -13,7 +13,7 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android">
         <size android:width="1px" />
-        <solid android:color="?attr/colorAccent" />
+        <solid android:color="@color/colorBlue" />
     </shape>
 
 </inset>
