added nautical miles as selectable option

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -92,5 +92,6 @@
     <string-array name="unitsEntries" translatable="false">
         <item>@string/pref_units_metric</item>
         <item>@string/pref_units_imperial</item>
+        <item>@string/pref_units_nautical</item>
     </string-array>
 </resources>
