--- a/app/src/main/res/layout/other_dialog.xml
+++ b/app/src/main/res/layout/other_dialog.xml
@@ -9,6 +9,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,7 +29,9 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="@string/dash"
-        android:ems="10" />
+        android:ems="10"
+        android:importantForAutofill="no"
+        tools:targetApi="o" />
 
     <LinearLayout
         android:orientation="horizontal"
