--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -12,25 +12,9 @@
     xmlns:ulogger="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory>
-        <net.fabiszewski.ulogger.TrimmedEditTextPreference
-            android:key="prefUsername"
-            android:title="@string/pref_username_title"
-            android:dialogMessage="@string/pref_username_summary"
-            app:useSimpleSummaryProvider="true" />
-        <net.fabiszewski.ulogger.PasswordPreference
-            android:key="prefPass"
-            android:title="@string/pref_pass_title"
-            android:dialogMessage="@string/pref_pass_summary"
-            app:useSimpleSummaryProvider="true" />
-        <net.fabiszewski.ulogger.TrimmedEditTextPreference
-            android:key="prefHost"
-            android:title="@string/pref_host_title"
-            android:dialogMessage="@string/pref_host_summary"
-            app:useSimpleSummaryProvider="true" />
-    </PreferenceCategory>
-
-    <PreferenceCategory>
+    <PreferenceCategory
+        android:title="@string/pref_cat_location"
+        android:icon="@drawable/ic_location_on_white_24dp">
         <net.fabiszewski.ulogger.ListWithEditTextPreference
             android:key="prefMinTime"
             android:title="@string/pref_mintime_title"
@@ -58,11 +42,6 @@
             android:defaultValue="@string/pref_minaccuracy_default"
             ulogger:otherSummary="@string/pref_minaccuracy_other"
             app:useSimpleSummaryProvider="true" />
-        <SwitchPreferenceCompat
-            android:key="prefLiveSync"
-            android:title="@string/pref_livesync_title"
-            android:summary="@string/pref_livesync_summary"
-            android:defaultValue="@string/pref_livesync_default" />
         <ListPreference
             android:key="prefProvider"
             android:title="@string/pref_provider_title"
@@ -70,9 +49,36 @@
             android:entries="@array/providersEntries"
             android:entryValues="@array/providersValues"
             app:useSimpleSummaryProvider="true" />
+        <SwitchPreferenceCompat
+            android:key="prefLiveSync"
+            android:title="@string/pref_livesync_title"
+            android:summary="@string/pref_livesync_summary"
+            android:defaultValue="@string/pref_livesync_default" />
     </PreferenceCategory>
 
-    <PreferenceCategory>
+    <PreferenceCategory
+        android:title="@string/pref_cat_server"
+        android:icon="@drawable/ic_cloud_upload_white_24dp">
+        <net.fabiszewski.ulogger.TrimmedEditTextPreference
+            android:key="prefUsername"
+            android:title="@string/pref_username_title"
+            android:dialogMessage="@string/pref_username_summary"
+            app:useSimpleSummaryProvider="true" />
+        <net.fabiszewski.ulogger.PasswordPreference
+            android:key="prefPass"
+            android:title="@string/pref_pass_title"
+            android:dialogMessage="@string/pref_pass_summary"
+            app:useSimpleSummaryProvider="true" />
+        <net.fabiszewski.ulogger.TrimmedEditTextPreference
+            android:key="prefHost"
+            android:title="@string/pref_host_title"
+            android:dialogMessage="@string/pref_host_summary"
+            app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/pref_cat_other"
+        android:icon="@drawable/ic_build_white_24dp">
         <SwitchPreferenceCompat
             android:key="prefAutoStart"
             android:title="@string/pref_autostart_title"
