--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
 <resources>
     <dimen name="label_font_size">18sp</dimen>
     <dimen name="status_indent">22dp</dimen>
+    <dimen name="thumbnail_size">100dp</dimen>
 </resources>
